<resources>
    <string name="app_name">Buzz</string>
    <string name="image">image</string>
    <string name="from">from</string>
    <string name="unemployed_private_limited">Unemployed Private Limited</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service">Read our " <b><font color="#E79E2D">Privacy Policy</font></b> ". Tap Agree and Continue to accept the "Terms of Service"</string>
    <string name="agree_and_continue">Agree And Continue</string>
    <string name="our_hives_your_hums">Our Hives Your Hums</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="lorem_ipsum">
                <b>Kindly contant </b>\n
        Incase of any operational issue\n Incase of any suggestion\n\n  ashuan03@gmail.com \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius duis at consectetur lorem donec massa sapien. Lobortis mattis aliquam faucibus purus in massa tempor nec feugiat. Facilisis gravida neque convallis a cras semper auctor neque. Tristique senectus et netus et malesuada fames ac. Nulla facilisi morbi tempus iaculis. Elementum eu facilisis sed odio morbi quis. Feugiat pretium nibh ipsum consequat nisl vel. Elementum integer enim neque volutpat ac tincidunt vitae semper quis. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Velit dignissim sodales ut eu sem integer vitae. Iaculis eu non diam phasellus vestibulum. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. Cum sociis natoque penatibus et magnis dis parturient montes nascetur. Eu scelerisque felis imperdiet proin fermentum leo vel. Dictum sit amet justo donec enim diam. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat.
At lectus urna duis convallis convallis. Ante in nibh mauris cursus mattis. \n\nPorta nibh venenatis cras sed felis eget velit aliquet. Integer malesuada nunc vel risus. Condimentum mattis pellentesque id nibh tortor. Ut faucibus pulvinar elementum integer enim. Ultrices in iaculis nunc sed augue lacus viverra vitae. Elit pellentesque habitant morbi tristique. Congue eu consequat ac felis donec et. Sit amet luctus venenatis lectus. Bibendum enim facilisis gravida neque convallis a cras semper auctor. Quam pellentesque nec nam aliquam sem et tortor consequat id. Ullamcorper sit amet risus nullam eget felis eget. Posuere urna nec tincidunt praesent semper. Lacus viverra vitae congue eu consequat ac. Purus sit amet volutpat consequat mauris nunc. Facilisis volutpat est velit egestas dui id ornare arcu odio. Nunc sed augue lacus viverra vitae. Cursus in hac habitasse platea.
Vestibulum lorem sed risus ultricies tristique nulla aliquet. \n\n Semper feugiat nibh sed pulvinar proin gravida. Nibh praesent tristique magna sit amet purus gravida quis. Ultricies mi quis hendrerit dolor magna. Metus vulputate eu scelerisque felis imperdiet proin. Ornare massa eget egestas purus viverra accumsan. Ut etiam sit amet nisl purus in. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet risus. Ullamcorper a lacus vestibulum sed arcu non odio. Suspendisse sed nisi lacus sed viverra tellus. Gravida neque convallis a cras semper auctor neque. Justo eget magna fermentum iaculis eu. Magna etiam tempor orci eu lobortis. Nibh sit amet commodo nulla facilisi.
Integer vitae justo eget magna. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. Habitant morbi tristique senectus et netus. Aliquet porttitor lacus luctus accumsan tortor posuere. Auctor augue mauris augue neque gravida in. Arcu risus quis varius quam. Aliquet risus feugiat in ante metus dictum. Quis hendrerit dolor magna eget est lorem ipsum dolor. At tempor commodo ullamcorper a lacus vestibulum. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet. Quis vel eros donec ac odio tempor. Nulla pellentesque dignissim enim sit. Integer vitae justo eget magna fermentum iaculis eu non diam. Est velit egestas dui id. Turpis massa tincidunt dui ut ornare lectus sit. Est placerat in egestas erat imperdiet.
Vitae congue eu consequat ac felis donec et odio pellentesque. Posuere morbi leo urna molestie at. \n\n Tempus egestas sed sed risus pretium quam. Volutpat ac tincidunt vitae semper. Morbi tristique senectus et netus et malesuada fames ac. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Tristique risus nec feugiat in. Velit scelerisque in dictum non consectetur a erat nam. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Et tortor consequat id porta nibh venenatis. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Euismod elementum nisi quis eleifend quam adipiscing vitae. Sit amet aliquam id diam maecenas ultricies mi. Duis at tellus at urna condimentum mattis pellentesque.
Sit amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Dapibus ultrices in iaculis nunc. Viverra mauris in aliquam sem fringilla ut morbi. Semper risus in hendrerit gravida. Id venenatis a condimentum vitae. Et odio pellentesque diam volutpat. Lectus urna duis convallis convallis tellus id interdum. Eu sem integer vitae justo. Tincidunt lobortis feugiat vivamus at. Augue neque gravida in fermentum et sollicitudin ac orci. A diam sollicitudin tempor id eu nisl nunc mi. Pharetra sit amet aliquam id diam maecenas. Tempus urna et pharetra pharetra massa massa ultricies. Nec feugiat nisl pretium fusce id. Malesuada bibendum arcu vitae elementum curabitur vitae nunc. Sollicitudin tempor id eu nisl nunc mi. Posuere morbi leo urna molestie at elementum eu facilisis sed. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus. Enim sed faucibus turpis in.
Amet consectetur adipiscing elit pellentesque. Gravida neque convallis a cras semper auctor neque. Sociis natoque penatibus et magnis. Pulvinar neque laoreet suspendisse interdum consectetur libero. Purus non enim praesent elementum facilisis leo vel fringilla est. Et pharetra pharetra massa massa ultricies. Fermentum posuere urna nec tincidunt praesent semper feugiat. Placerat in egestas erat imperdiet sed. Ultricies integer quis auctor elit sed vulputate mi. Ac turpis egestas integer eget aliquet nibh. Lectus sit amet est placerat in. Risus quis varius quam quisque. Pharetra massa massa ultricies mi quis hendrerit dolor magna. Placerat in egestas erat imperdiet sed. Urna nunc id cursus metus aliquam eleifend mi in nulla. Id leo in vitae turpis massa sed. Sapien pellentesque habitant morbi tristique. Velit ut tortor pretium viverra suspendisse potenti nullam. Varius sit amet mattis vulputate. Magna eget est lorem ipsum dolor sit amet.
Fermentum odio eu feugiat pretium nibh ipsum. Massa eget egestas purus viverra. Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. Tristique magna sit amet purus. Et netus et malesuada fames ac turpis egestas maecenas. Netus et malesuada fames ac turpis egestas maecenas. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Orci a scelerisque purus semper eget duis. Platea dictumst quisque sagittis purus. Quisque sagittis purus sit amet volutpat consequat mauris nunc congue. Mus mauris vitae ultricies leo integer malesuada nunc vel. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Id consectetur purus ut faucibus pulvinar elementum. Ipsum consequat nisl vel pretium lectus quam id leo in.
Tellus mauris a diam maecenas sed enim ut sem viverra. Ac turpis Metus aliquam eleifend mi in nulla. Ligula ullamcorper malesuada proin libero nunc. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Consequat semper viverra nam libero. Risus sed vulputate odio ut enim blandit volutpat maecenas. Eleifend mi in nulla posuere sollicitudin aliquam. Egestas dui id ornare arcu odio ut sem. Nisi est sit amet facilisis magna etiam tempor orci. Ornare arcu odio ut sem. Id leo in vitae turpis. Facilisis gravida neque convallis a cras semper auctor neque vitae. Pellentesque elit eget gravida cum sociis natoque penatibus. Quam vulputate dignissim suspendisse in est ante in nibh. Pharetra massa massa ultricies mi quis. In vitae turpis massa sed elementum tempus. Ultrices mi tempus imperdiet nulla malesuada pellentesque elit.
Imperdiet proin fermentum leo vel orci porta non pulvinar. Cursus mattis molestie a iaculis at erat pellentesque adipiscing commodo. Leo in vitae turpis massa. Arcu odio ut sem nulla pharetra diam sit amet nisl. Mi quis hendrerit dolor magna eget est. Nec tincidunt praesent semper feugiat nibh sed. Eu non diam phasellus vestibulum lorem sed risus ultricies. Imperdiet nulla malesuada pellentesque elit. Vulputate sapien nec sagittis aliquam. Lectus arcu bibendum at varius vel pharetra vel. Maecenas ultricies mi eget mauris pharetra et ultrices neque ornare. Nam libero justo laoreet sit amet cursus sit amet dictum.
\n\n\n
        <b>Kindly contant </b>\n
        Incase of any operational issue\n Incase of any suggestion\n\n  ashuan03@gmail.com \n

    </string>

    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="an_otp_will_be_sent_to_your_phone_number_for_verification">An OTP will be sent to your Phone Number for verification</string>
    <string name="continue_">Continue</string>
    <string name="type_your_phone_number">Type Your Phone Number</string>
    <string name="verify_91_8126308260">Verify : +91 8126308260</string>
    <string name="enter_the_otp_sent_to_your_phone_number">Enter the OTP sent to your Phone Number</string>
    <string name="profile_info">Profile Info</string>
    <string name="set_a_profile_picture_along_with_your_name">Set a profile picture along with your name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="search">search</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_user">Sample User</string>
    <string name="tap_to_send_a_message">Tap to send a message</string>
    <string name="_6_00_pm">11:00 PM</string>
    <string name="type_a_message">Type a message</string>
    <string name="sample_message">Sample Message</string>


</resources>