<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/sender_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/image"
            android:visibility="gone"
            app:srcCompat="@drawable/photo_send" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/sample_message"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/message_time"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:singleLine="false"
                android:text="@string/_6_00_pm"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/reaction"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_fb_laugh" />
</androidx.constraintlayout.widget.ConstraintLayout>